# KoFinRe

./: .gitignore  FRAMEWORK_GAP_ANALYSIS.md  PAPER_DRAFT.md  PASKA_KOREAN_ADAPTATION.md  README.md  UPDATE.MD  download_rfp.py  pyproject.toml  requirements.txt  rfp_excel.py  rfp_requirement_filter.py  rfp_smell.py
baselines/kofinre_baseline_v2_20260722/: BASELINE_V2.md  d5_rfp_s1_reattribution.json  d6_per_project.csv  d6_spec_summary.json
docs/: EXTRACTION_RULES.md  IMPROVEMENT_RECOMMENDATIONS.md  JOURNEY.md  KCI_DRAFT.md  PAPER_DRAFT.md  PAPER_FINAL.md  UPDATE.MD
examples/: basic_usage.py  heuristic_correction_demo.py  llm_correction_demo.py  req_abstract_demo.py
final/: CMMI_NCS_COMPARISON.md  DOMAIN_COMPARISON.md  KoFinRe-QA_JOK_실증평가_v2.3.docx  KoFinRe-QA_JOK_실증평가_v2.4.docx  KoFinRe-QA_JOK_실증평가_v2.5.docx  KoFinRe-QA_JOK_실증평가_v2.6.docx  KoFinRe_Paper_v2.8.1_FINAL.md  KoFinRe_Paper_v2.8.1_FINAL_EN.md  README.md
kofinre/: __init__.py  correction.py  correction_heuristic.py  ensemble.py  korean_patterns.py  metrics.py  pipeline.py  reporting.py  smell_taxonomy.yaml  validation.py
kofinre/detectors/: base.py  (+6 more)
legacy/: README.md  req_abstract_eval.py  req_abstract_excel.py  rfp_excel_requirements.py  rfp_excel_sentences.py  rfp_extract.py  rfp_list.json
old/: README.md  STANDARDS_COMPARISON.md
scripts/: build_gold_dataset.py  build_gold_rfp2013.py  build_pdf_bundle.py  evaluate_rfp2013.py  extract_rfp2013_xlsx.py  run_baselines.py  run_detection.py  run_extraction.py
tests/: test_cmmi_smells.py  test_detectors.py  test_korean_patterns.py  test_metrics.py  test_new_smells.py
web/: README.md  index.html
(+38 files in other folders)
